<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
		android:id="@+id/crosswords_dict_spinner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:entries="@array/crosswords_names"
		android:prompt="@string/dictionary_name_prompt"
		android:visibility="invisible"/>

	<LinearLayout
		android:id="@+id/crosswords"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
				
			<EditText
			    style="@style/EditTextStyle"
				android:id="@+id/CrosswordsText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:scrollHorizontally="true"
				android:hint="@string/crosswords_edit_hint"
				android:inputType="textFilter"/>

			<Button
			    style="@style/ButtonStyle"
				android:id="@+id/CrosswordsTextClear"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/clear_button_text"/>
			
			<Button
			    style="@style/ButtonStyle"
				android:id="@+id/CrosswordsButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/search_button_text"/>
				
		</LinearLayout>
		
	</LinearLayout>

</RelativeLayout>