<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/free_mode_layout"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:minWidth="280dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical">

			<TextView
				android:id="@+id/free_mode_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/free_mode_text"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:orientation="horizontal">

				<Button
					android:text="@string/free_mode_relnotes_button_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/free_mode_relnotes_button"/>

				<Button
					android:id="@+id/free_mode_continue_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/free_mode_continue_text"/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>
