<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TabStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<Spinner
		android:id="@+id/dictionary_dict_spinner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:entries="@array/dictionary_names"
		android:prompt="@string/dictionary_name_prompt"
		android:visibility="invisible"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

		    <FrameLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="3" >
				
				<EditText
				    style="@style/EditTextStyle"
					android:id="@+id/DictionaryText"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/edit_text_height"
					android:hint="@string/dictionary_edit_hint"
					android:inputType="textFilter"
                    android:imeOptions="actionDone" />
	
				<Button
				    style="@style/ClearButtonStyle"
					android:id="@+id/DictionaryTextClear"
					android:layout_width="@dimen/clear_button_size"
					android:layout_height="@dimen/clear_button_size" />

			</FrameLayout>
			
			<Button
			    style="@style/ButtonStyle"
				android:id="@+id/DictionaryButton"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/button_height"
				android:layout_weight="1"
				android:text="@string/search_button_text"/>

		</LinearLayout>

		<Spinner
			android:id="@+id/DictionarySpinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
    		android:layout_marginTop="5dip"
			android:entries="@array/search_types" 
    		android:prompt="@string/search_type_prompt"/>

		<LinearLayout
			android:id="@+id/DictionaryToggleButtons"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="10dip"
			android:orientation="horizontal">
		
			<com.ppp.wordplayadvlib.widgets.MultiStateButton
			    style="@style/MultiStateButtonStyle"
				android:id="@+id/DictionaryWordScores"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/button_height"/>
				
			<com.ppp.wordplayadvlib.widgets.MultiStateButton
			    style="@style/MultiStateButtonStyle"
				android:id="@+id/DictionarySortOrder"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/button_height"/>

		</LinearLayout>
		
	</LinearLayout>
	
</RelativeLayout>